--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6008,6 +6008,31 @@ repositories:
       url: https://github.com/ros-gbp/open_karto-release.git
       version: 1.1.4-0
     status: maintained
+  open_manipulator:
+    doc:
+      type: git
+      url: https://github.com/ROBOTIS-GIT/open_manipulator.git
+      version: kinetic-devel
+    release:
+      packages:
+      - open_manipulator
+      - open_manipulator_description
+      - open_manipulator_dynamixel_ctrl
+      - open_manipulator_gazebo
+      - open_manipulator_moveit
+      - open_manipulator_msgs
+      - open_manipulator_position_ctrl
+      - open_manipulator_with_tb3
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ROBOTIS-GIT-release/open_manipulator-release.git
+      version: 0.1.0-0
+    source:
+      test_pull_requests: true
+      type: git
+      url: https://github.com/ROBOTIS-GIT/open_manipulator.git
+      version: kinetic-devel
+    status: developed
   open_street_map:
     doc:
       type: git
