--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -10701,6 +10701,27 @@ repositories:
       url: https://github.com/ROBOTIS-GIT/turtlebot3.git
       version: kinetic-devel
     status: maintained
+  turtlebot3_applications:
+    doc:
+      type: git
+      url: https://github.com/ROBOTIS-GIT/turtlebot3_applications.git
+      version: kinetic-devel
+    release:
+      packages:
+      - turtlebot3_applications
+      - turtlebot3_automatic_parking
+      - turtlebot3_follow_filter
+      - turtlebot3_follower
+      - turtlebot3_panorama
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ROBOTIS-GIT-release/turtlebot3_applications-release.git
+      version: 0.1.0-0
+    source:
+      type: git
+      url: https://github.com/ROBOTIS-GIT/turtlebot3_applications.git
+      version: kinetic-devel
+    status: developed
   turtlebot3_msgs:
     doc:
       type: git
