--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -308,6 +308,11 @@ repositories:
       type: git
       url: https://github.com/ros/pluginlib.git
       version: melodic-devel
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/pluginlib-release.git
+      version: 1.12.0-0
     source:
       test_pull_requests: true
       type: git
