actionlib: 1.11.13-0 in 'melodic/distribution.yaml' [bloom]

--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -16,6 +16,11 @@ repositories:
       type: git
       url: https://github.com/ros/actionlib.git
       version: melodic-devel
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/actionlib-release.git
+      version: 1.11.13-0
     source:
       test_pull_requests: true
       type: git
