--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -15,7 +15,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/actionlib.git
-      version: melodic-devel
+      version: indigo-devel
     release:
       tags:
         release: release/melodic/{package}/{version}
@@ -25,7 +25,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/ros/actionlib.git
-      version: melodic-devel
+      version: indigo-devel
     status: maintained
   angles:
     doc:
