--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -15,12 +15,17 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros/actionlib.git
-      version: melodic-devel
+      version: indigo-devel
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/actionlib-release.git
+      version: 1.11.13-0
     source:
       test_pull_requests: true
       type: git
       url: https://github.com/ros/actionlib.git
-      version: melodic-devel
+      version: indigo-devel
     status: maintained
   angles:
     doc:
