Enable pull-request testing for rosflight repository

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -8557,6 +8557,7 @@ repositories:
       url: https://github.com/rosflight/rosflight-release.git
       version: 1.0.0-1
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/rosflight/rosflight.git
       version: master
