--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -3043,6 +3043,7 @@ repositories:
       url: https://github.com/rosflight/rosflight-release.git
       version: 1.0.0-0
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/rosflight/rosflight.git
       version: master
