Add graphviz-dev to base.yaml

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1001,6 +1001,9 @@ graphviz:
   rhel: [graphviz]
   slackware: [graphviz]
   ubuntu: [graphviz]
+graphviz-dev:
+  debian: [libgraphviz-dev]
+  ubuntu: [libgraphviz-dev]
 gringo:
   debian: [gringo]
   fedora: [gringo]
