Adding rosmon to kinetic distribution (source + doc)

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -8690,6 +8690,16 @@ repositories:
       url: https://github.com/ros/roslisp_common.git
       version: master
     status: developed
+  rosmon:
+    doc:
+      type: git
+      url: https://github.com/xqms/rosmon.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/xqms/rosmon.git
+      version: master
+    status: maintained
   rospack:
     doc:
       type: git
