change mapping of python-imaging since the package was removed from bionic

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1399,7 +1399,7 @@ python-imaging:
       packages: [python-pillow]
   ubuntu:
     artful: [python-imaging]
-    bionic: [python-imaging]
+    bionic: [python-pil]
     lucid: [python-imaging]
     maverick: [python-imaging]
     natty: [python-imaging]
