Add graphviz-dev fedora rule

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1003,6 +1003,7 @@ graphviz:
   ubuntu: [graphviz]
 graphviz-dev:
   debian: [libgraphviz-dev]
+  fedora: [graphviz-devel]
   ubuntu: [libgraphviz-dev]
 gringo:
   debian: [gringo]
