add Adafruit-MCP3008 and Adafruit-GPIO to rosdep/python.yaml

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1,3 +1,11 @@
+adafruit-mcp3008-pip:
+  debian:
+    pip:
+      packages: [Adafruit-MCP3008]
+adafruit-gpio-pip:
+  debian:
+    pip:
+      packages: [Adafruit-GPIO]
 adafruit-pca9685-pip:
   debian:
     pip:
