add ubuntu to Adafruit-GPIO and Adafruit-MCP3008

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2,8 +2,14 @@ adafruit-gpio-pip:
   debian:
     pip:
       packages: [Adafruit-GPIO]
+  ubuntu:
+    pip:
+      packages: [Adafruit-GPIO]
 adafruit-mcp3008-pip:
   debian:
+    pip:
+      packages: [Adafruit-MCP3008]
+  ubuntu:
     pip:
       packages: [Adafruit-MCP3008]
 adafruit-pca9685-pip:
