--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1998,6 +1998,13 @@ python-path.py:
   ubuntu:
     pip:
       packages: [path.py]
+python-pathos:
+  debian:
+    pip:
+      packages: [pathos]
+  ubuntu:
+    pip:
+      packages: [pathos]
 python-pathtools:
   debian: [python-pathtools]
   ubuntu:
