Source & doc jobs for control_msgs, realtime_tools, unique_identifier

--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -140,6 +140,16 @@ repositories:
       url: https://github.com/ros/common_msgs.git
       version: jade-devel
     status: maintained
+  control_msgs:
+    doc:
+      type: git
+      url: https://github.com/ros-controls/control_msgs.git
+      version: kinetic-devel
+    source:
+      type: git
+      url: https://github.com/ros-controls/control_msgs.git
+      version: kinetic-devel
+    status: maintained
   dynamic_reconfigure:
     doc:
       type: git
@@ -405,6 +415,16 @@ repositories:
       url: https://github.com/ros-planning/random_numbers.git
       version: master
     status: maintained
+  realtime_tools:
+    doc:
+      type: git
+      url: https://github.com/ros-controls/realtime_tools.git
+      version: kinetic-devel
+    source:
+      type: git
+      url: https://github.com/ros-controls/realtime_tools.git
+      version: kinetic-devel
+    status: maintained
   resource_retriever:
     doc:
       type: git
@@ -652,6 +672,16 @@ repositories:
       type: git
       url: https://github.com/ros/std_msgs.git
       version: groovy-devel
+    status: maintained
+  unique_identifier:
+    doc:
+      type: git
+      url: https://github.com/ros-geographic-info/unique_identifier.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/ros-geographic-info/unique_identifier.git
+      version: master
     status: maintained
   urdf:
     doc:
