--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -145,6 +145,11 @@ repositories:
       type: git
       url: https://github.com/ros-controls/control_msgs.git
       version: kinetic-devel
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/control_msgs-release.git
+      version: 1.4.0-0
     source:
       type: git
       url: https://github.com/ros-controls/control_msgs.git
