--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1,3 +1,17 @@
+adafruit-gpio-pip:
+  debian:
+    pip:
+      packages: [Adafruit-GPIO]
+  ubuntu:
+    pip:
+      packages: [Adafruit-GPIO]
+adafruit-mcp3008-pip:
+  debian:
+    pip:
+      packages: [Adafruit-MCP3008]
+  ubuntu:
+    pip:
+      packages: [Adafruit-MCP3008]
 adafruit-pca9685-pip:
   debian:
     pip:
