--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -699,6 +699,15 @@ repositories:
       type: git
       url: https://github.com/ros-geographic-info/unique_identifier.git
       version: master
+    release:
+      packages:
+      - unique_id
+      - unique_identifier
+      - uuid_msgs
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-geographic-info/unique_identifier-release.git
+      version: 1.0.6-0
     source:
       type: git
       url: https://github.com/ros-geographic-info/unique_identifier.git
