python-pathos: use -pip extension

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1998,7 +1998,7 @@ python-path.py:
   ubuntu:
     pip:
       packages: [path.py]
-python-pathos:
+python-pathos-pip:
   debian:
     pip:
       packages: [pathos]
