[melodic] Add doc & source jobs for control_toolbox and urdf_geometry_parser

--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -155,6 +155,16 @@ repositories:
       url: https://github.com/ros-controls/control_msgs.git
       version: kinetic-devel
     status: maintained
+  control_toolbox:
+    doc:
+      type: git
+      url: https://github.com/ros-controls/control_toolbox.git
+      version: kinetic-devel
+    source:
+      type: git
+      url: https://github.com/ros-controls/control_toolbox.git
+      version: kinetic-devel
+    status: maintained
   dynamic_reconfigure:
     doc:
       type: git
@@ -755,6 +765,16 @@ repositories:
       url: https://github.com/ros/urdf.git
       version: melodic-devel
     status: maintained
+  urdf_geometry_parser:
+    doc:
+      type: git
+      url: https://github.com/ros-controls/urdf_geometry_parser.git
+      version: kinetic-devel
+    source:
+      type: git
+      url: https://github.com/ros-controls/urdf_geometry_parser.git
+      version: kinetic-devel
+    status: developed
   urdfdom_py:
     doc:
       type: git
