add release info for agni_tf_tools

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -150,6 +150,21 @@ repositories:
       url: https://github.com/atenpas/agile_grasp.git
       version: master
     status: maintained
+  agni_tf_tools:
+    doc:
+      type: git
+      url: https://github.com/ubi-agni/agni_tf_tools.git
+      version: indigo-devel
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/ubi-agni-gbp/agni_tf_tools-release.git
+      version: 0.1.0-0
+    source:
+      type: git
+      url: https://github.com/ubi-agni/agni_tf_tools.git
+      version: indigo-devel
+    status: maintained
   agvs_common:
     doc:
       type: git
