--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -62,6 +62,21 @@ repositories:
       type: git
       url: https://github.com/ros-drivers/advanced_navigation_driver.git
       version: master
+  agni_tf_tools:
+    doc:
+      type: git
+      url: https://github.com/ubi-agni/agni_tf_tools.git
+      version: indigo-devel
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/ubi-agni-gbp/agni_tf_tools-release.git
+      version: 0.1.0-0
+    source:
+      type: git
+      url: https://github.com/ubi-agni/agni_tf_tools.git
+      version: indigo-devel
+    status: maintained
   angles:
     doc:
       type: git
