--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -121,6 +121,21 @@ repositories:
       url: https://github.com/tork-a/adi_driver.git
       version: master
     status: developed
+  agni_tf_tools:
+    doc:
+      type: git
+      url: https://github.com/ubi-agni/agni_tf_tools.git
+      version: indigo-devel
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ubi-agni-gbp/agni_tf_tools-release.git
+      version: 0.1.0-0
+    source:
+      type: git
+      url: https://github.com/ubi-agni/agni_tf_tools.git
+      version: indigo-devel
+    status: maintained
   agvs_common:
     doc:
       type: git
