python-pathos: add package in python.yaml (#17166)
* python-pathos: add package in python.yaml

* python-pathos: use -pip extension

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -2012,6 +2012,13 @@ python-path.py:
   ubuntu:
     pip:
       packages: [path.py]
+python-pathos-pip:
+  debian:
+    pip:
+      packages: [pathos]
+  ubuntu:
+    pip:
+      packages: [pathos]
 python-pathtools:
   debian: [python-pathtools]
   ubuntu:
