--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -160,6 +160,11 @@ repositories:
       type: git
       url: https://github.com/ros-controls/control_toolbox.git
       version: kinetic-devel
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/control_toolbox-release.git
+      version: 1.16.0-0
     source:
       type: git
       url: https://github.com/ros-controls/control_toolbox.git
