--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -42,6 +42,8 @@ antlr:
   fedora: [antlr3-C, antlr-C++]
   gentoo: [dev-java/antlr]
   ubuntu: [antlr, libantlr-dev]
+apache2:
+  ubuntu: [apache2]
 apache2-mpm-prefork:
   debian:
     jessie: [apache2-mpm-prefork]
