add python-matplotlib for artful and bionic

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1611,6 +1611,8 @@ python-matplotlib:
   rhel: [python-matplotlib]
   slackware: [matplotlib]
   ubuntu:
+    artful: [python-matplotlib]
+    bionic: [python-matplotlib]
     lucid: [python-matplotlib]
     maverick: [python-matplotlib]
     natty: [python-matplotlib]
