rqt_graph: 0.4.9-0 in 'melodic/distribution.yaml' [bloom] (#17201)

--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -776,6 +776,21 @@ repositories:
       url: https://github.com/ros-visualization/rqt.git
       version: kinetic-devel
     status: maintained
+  rqt_graph:
+    doc:
+      type: git
+      url: https://github.com/ros-visualization/rqt_graph.git
+      version: master
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/rqt_graph-release.git
+      version: 0.4.9-0
+    source:
+      type: git
+      url: https://github.com/ros-visualization/rqt_graph.git
+      version: master
+    status: maintained
   rqt_py_console:
     doc:
       type: git
