rqt_topic: 0.4.10-0 in 'melodic/distribution.yaml' [bloom] (#17208)

--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -867,6 +867,21 @@ repositories:
       url: https://github.com/ros-visualization/rqt_py_console.git
       version: master
     status: maintained
+  rqt_topic:
+    doc:
+      type: git
+      url: https://github.com/ros-visualization/rqt_topic.git
+      version: master
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/rqt_topic-release.git
+      version: 0.4.10-0
+    source:
+      type: git
+      url: https://github.com/ros-visualization/rqt_topic.git
+      version: master
+    status: maintained
   std_msgs:
     doc:
       type: git
