--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -945,6 +945,21 @@ repositories:
       url: https://github.com/ros-visualization/rqt_robot_steering.git
       version: master
     status: maintained
+  rqt_service_caller:
+    doc:
+      type: git
+      url: https://github.com/ros-visualization/rqt_service_caller.git
+      version: master
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/ros-gbp/rqt_service_caller-release.git
+      version: 0.4.8-0
+    source:
+      type: git
+      url: https://github.com/ros-visualization/rqt_service_caller.git
+      version: master
+    status: maintained
   rqt_topic:
     doc:
       type: git
