--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -851,6 +851,7 @@ repositories:
       url: https://github.com/ros-gbp/rqt_graph-release.git
       version: 0.4.9-0
     source:
+      test_pull_requests: true
       type: git
       url: https://github.com/ros-visualization/rqt_graph.git
       version: master
