Add graphviz-dev to base.yaml (#17141)
* Add graphviz-dev to base.yaml

* Add graphviz-dev fedora rule

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1001,6 +1001,10 @@ graphviz:
   rhel: [graphviz]
   slackware: [graphviz]
   ubuntu: [graphviz]
+graphviz-dev:
+  debian: [libgraphviz-dev]
+  fedora: [graphviz-devel]
+  ubuntu: [libgraphviz-dev]
 gringo:
   debian: [gringo]
   fedora: [gringo]
