--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3115,6 +3115,10 @@ python-sip:
     yakkety_python3: [python3-sip-dev]
     zesty: [python-sip-dev]
     zesty_python3: [python3-sip-dev]
+    artful: [python-sip-dev]
+    artful_python3: [python3-sip-dev]
+    bionic: [python-sip-dev]
+    bionic_python3: [python3-sip-dev]
 python-sip4:
   debian: [python-sip-dev]
   fedora: [sip]
