--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -3095,6 +3095,10 @@ python-sip:
     slackpkg:
       packages: [sip]
   ubuntu:
+    artful: [python-sip-dev]
+    artful_python3: [python3-sip-dev]
+    bionic: [python-sip-dev]
+    bionic_python3: [python3-sip-dev]
     lucid: [python-sip-dev]
     maverick: [python-sip-dev]
     natty: [python-sip-dev]
