orocos kinematics dynamics release (#17221)
* orocos kinematics dynamics release

* fix indentation

* fix entry

Signed-off-by: Ruben Smits <ruben.smits@intermodalics.eu>

--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -392,6 +392,25 @@ repositories:
       url: https://github.com/ros/nodelet_core.git
       version: indigo-devel
     status: maintained
+  orocos_kinematics_dynamics:
+    doc:
+      type: git
+      url: https://github.com/orocos/orocos_kinematics_dynamics.git
+      version: master
+    release:
+      packages:
+      - orocos_kdl
+      - orocos_kinematics_dynamics
+      - python_orocos_kdl
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/orocos/orocos-kdl-release.git
+      version: 1.4.0-0
+    source:
+      type: git
+      url: https://github.com/orocos/orocos_kinematics_dynamics.git
+      version: master
+    status: maintained
   pcl_msgs:
     doc:
       type: git
