Add bullet for artful and bionic

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -306,6 +306,8 @@ bullet:
   macports: [bullet]
   opensuse: [libbullet]
   ubuntu:
+    artful: [libbullet-dev]
+    bionic: [libbullet-dev]
     precise: [libbullet-dev]
     quantal: [libbullet-dev]
     raring: [libbullet-dev]
